--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.8"
 google-api-python-client = "^2.47.0"
 google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^0.5.1"
+click = "^8.1.3"
+tqdm = "^4.64.0"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
