--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "simple-gdrive"
-version = "1.0.1"
+version = "1.1.0"
 description = "Simple command to help download and upload big files to Google Drive (using their official Drive APIs)"
 authors = ["Binh Vu <binh@toan2.com>"]
 license = "MIT"
@@ -9,7 +9,7 @@ homepage = "https://github.com/binh-vu/simple_gdrive"
 repository = "https://github.com/binh-vu/simple_gdrive"
 
 [tool.poetry.scripts]
-gdrive = 'simple_gdrive.cli:cli'
+gdrive = 'simple_gdrive.__main__:cli'
 
 [tool.poetry.dependencies]
 python = "^3.8"
