--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ loguru = "^0.6.0"
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
